--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         </div>
     </nav>
 
+    <h2>dr Andrija Delibasic</h2>
+
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
