--- a/index.html
+++ b/index.html
@@ -51,8 +51,21 @@
         </div>
     </nav>
 
-    <h2>dr Andrija Delibasic</h2>
+    <!-- banner -->
+    <section class="banner">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-md-10 mx-auto">
+                    <h1 class="text-white display-4 font-italic">Sourcing agency</h1>
+                    <h2>What we do</h2>
+                    <a href="" class="bannerBtn">Hire Us</a>
+                    <a href="" class="bannerBtn">Contact</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
