Finish banner icons

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     </nav>
 
     <!-- banner -->
-    <section class="banner">
+    <section id="banner">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center text-center">
                 <div class="col-md-10 mx-auto">
                     <h1 class="text-white display-4 font-italic">Sourcing agency</h1>
                     <h2>What we do</h2>
@@ -65,7 +65,36 @@
         </div>
     </section>
 
-    
+    <!-- banner icons -->
+    <section class="bannerIcons">
+        <div class="row no-gutters">
+            <div class="col-md-8 mx-auto">
+                <ul class="list-unstyled d-flex justify-content-center">
+                    <li class="text-center">
+                        <i class="fab fa-html5"></i>
+                        <p>Structure</p>
+                    </li>
+                    <li class="text-center">
+                        <i class="fab fa-css3-alt"></i>
+                        <p>Structure</p>
+                    </li>
+                    <li class="text-center">
+                        <i class="fab fa-js"></i>
+                        <p>Interactivity</p>
+                    </li>
+                    <li class="text-center">
+                        <i class="fab fa-php"></i>
+                        <p>Dynamic</p>
+                    </li>
+                    <li class="text-center">
+                        <i class="fab fa-wordpress"></i>
+                        <p>Popular</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+    </section>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
