--- a/index.html
+++ b/index.html
@@ -93,8 +93,45 @@
                 </ul>
             </div>
         </div>
-
     </section>
+
+    <!-- services -->
+    <section id="services" class="py-5">
+        <article class="container">
+            <div class="row title">
+                <div class="col-md-12 mb-5">
+                    <h2>Services we provide</h2>
+                    <h4 class="text-muted">Lorem ipsum dolor sit amet.</h4>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-3">
+                    <i class="fab fa-apple"></i>
+                    <h3 class="my-3">IOS Apps</h3>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat facilis saepe nulla. Animi sequi maiores velit totam eum accusamus quasi!</p>
+                </div>
+                <div class="col-md-3">
+                    <i class="fab fa-android"></i>
+                    <h3 class="my-3">Android Apps</h3>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat facilis saepe nulla. Animi sequi maiores velit totam eum accusamus quasi!</p>
+                </div>
+                <div class="col-md-3">
+                    <i class="fab fa-php"></i>
+                    <h3 class="my-3">PHP development</h3>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat facilis saepe nulla. Animi sequi maiores velit totam eum accusamus quasi!</p>
+                </div>
+                <div class="col-md-3">
+                    <i class="fab fa-js"></i>
+                    <h3 class="my-3">JS development</h3>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat facilis saepe nulla. Animi sequi maiores velit totam eum accusamus quasi!</p>
+                </div>
+            </div>
+        </article>
+    </section>
+
+
+
+
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
