--- a/index.html
+++ b/index.html
@@ -129,6 +129,21 @@
         </article>
     </section>
 
+    <!-- newsletter -->
+    <section id="newsletter" class="py-5 d-flex align-items-center">
+        <article class="container">
+            <div class="row">
+                <div class="col-md-10 mx-auto">
+                    <h2>Newsletter</h2>
+                    <form action="" class="form-inline">
+                        <input type="email" class="form-control" placeholder="e-mail">
+                        <button>Subscribe now</button>
+                    </form>
+                </div>
+            </div>
+        </article>
+    </section>
+
 
 
 
