--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="" class="nav-link">Home</a>
+                    <a href="#" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Services</a>
+                    <a href="#services" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Team</a>
+                    <a href="#team" class="nav-link">Team</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">About</a>
+                    <a href="#about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
                     <a href="" class="nav-link">People</a>
@@ -45,7 +45,7 @@
                     <a href="" class="nav-link">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Contact</a>
+                    <a href="#newsletter" class="nav-link">Contact</a>
                 </li>
             </ul>
         </div>
@@ -144,11 +144,12 @@
         </article>
     </section>
 
+    <!-- team -->
     <section id="team">
         <article class="container">
             <div class="row">
                 <div class="col-md-10 mx-auto">
-                    <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-ride="carousel">
+                    <div id="carouselExampleCaptions" class="carousel slide carousel-fade " data-ride="carousel">
                         <ol class="carousel-indicators">
                           <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
                           <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
@@ -191,6 +192,68 @@
         </article>
     </section>
 
+    <!-- about -->
+    <section id="about">
+        <div class="container">
+            <div class="row title">
+                <div class="col-md-12 mb-5">
+                    <h2>About us</h2>
+                    <h4 class="text-white">Lorem ipsum dolor sit amet.</h4>
+                </div>
+            </div>
+            <div class="row justify-content-between">
+                <div class="col-md-6">
+                    <div class="accordion" id="accordionExample">
+                        <div class="card">
+                          <div class="card-header" id="headingOne">
+                            <h2 class="mb-0">
+                              <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Web Development
+                              </button>
+                            </h2>
+                          </div>
+                      
+                            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                                <div class="card-body">
+                                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti eaque nostrum quod totam earum dolor officiis hic sapiente harum quasi architecto nobis, esse provident dolorum ratione iure unde libero, eveniet beatae necessitatibus, temporibus dolore! Ducimus tenetur id cumque ipsa, ad tempore aliquam voluptatum? Maxime, id iusto. Itaque ratione ab voluptatem!                            </div>
+                                </div>
+                            </div>
+                        <div class="card">
+                          <div class="card-header" id="headingTwo">
+                            <h2 class="mb-0">
+                              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                Mobile Development
+                              </button>
+                            </h2>
+                          </div>
+                          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                            <div class="card-body">
+                              Some placeholder content for the second accordion panel. This panel is hidden by default.
+                            </div>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <div class="card-header" id="headingThree">
+                            <h2 class="mb-0">
+                              <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                Internet Marketing
+                              </button>
+                            </h2>
+                          </div>
+                          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                            <div class="card-body">
+                              And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                <div class="col-md-5">
+                    <img src="img/about2.jpg" alt="" class="img-fluid">
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
