Finish Projects and People

--- a/index.html
+++ b/index.html
@@ -255,6 +255,184 @@
         </div>
     </section>
 
+    <section id="projects" class="py-5">
+      <div class="container-fluid">
+        <div class="row title">
+          <div class="col-md-12 mb-5">
+            <h2 class="container">Projects</h2>
+            <h4 class="text-muted container">Lorem ipsum dolor sit amet.</h4>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project1.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project2.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project3.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project4.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project5.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project6.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project7.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="imgContainer">
+              <img class="img-fluid" src="img/project8.jpg" alt="">
+              <div class="imgIcons">
+                <a href=""><i class="fab fa-facebook-square"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+                <a href=""><i class="fab fa-twitter"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    <section id="people">
+      <div class="container">
+        <div class="row title">
+          <div class="col-md-12 mb-5">
+            <h2 class="container">Our team</h2>
+            <h4 class="text-muted container">Lorem ipsum dolor sit amet.</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people1.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Ron</h2>
+              <h5>Lead developer</h5>
+              <hr>
+              <p class="text-muted">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate illo iusto in atque eligendi quisquam.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people2.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Rudi</h2>
+              <h5>Backing vocals</h5>
+              <hr>
+              <p class="text-muted">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate illo iusto in atque eligendi quisquam.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people3.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Tammy</h2>
+              <h5>Designer</h5>
+              <hr>
+              <p class="text-muted">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate illo iusto in atque eligendi quisquam.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <img src="img/people4.jpg" alt="" class="img-fluid">
+            <div class="card-body">
+              <h2>Samantha</h2>
+              <h5>Photographer</h5>
+              <hr>
+              <p class="text-muted">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate illo iusto in atque eligendi quisquam.
+              </p>
+            </div>
+            <div class="card-footer">
+              <a href=""><i class="fab fa-facebook-square"></i></a>
+              <a href=""><i class="fab fa-instagram"></i></a>
+              <a href=""><i class="fab fa-twitter"></i></a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      </div>
+    </section>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
