--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
         </div>
     </section>
 
+    <!-- projects -->
     <section id="projects" class="py-5">
       <div class="container-fluid">
         <div class="row title">
@@ -347,6 +348,8 @@
         </div>
     </section>
 
+
+    <!-- people -->
     <section id="people">
       <div class="container">
         <div class="row title">
@@ -428,11 +431,106 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- pricing -->
+
+  <section id="pricing" class="py-5">
+    <div class="container">
+      <div class="row title">
+        <div class="col-md-12 mb-5">
+          <h2 class="container">Our team</h2>
+          <h4 class="text-muted container">Lorem ipsum dolor sit amet.</h4>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Basic</h4>
+              <h6>Monthly Plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup>
+              <span class="dollars">9</span>
+              <span class="cents">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150 GB monthly bandwith</li>
+              <li class="list-group-item">15$ monthly backup</li>
+              <li class="list-group-item">24/7 support</li>
+              <li class="list-group-item">Free SSL</li>            
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Standard</h4>
+              <h6>Monthly Plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup>
+              <span class="dollars">19</span>
+              <span class="cents">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150 GB monthly bandwith</li>
+              <li class="list-group-item">15$ monthly backup</li>
+              <li class="list-group-item">24/7 support</li>
+              <li class="list-group-item">Free SSL</li>            
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Premium</h4>
+              <h6>Monthly Plan</h6>
+            </div>
+            <div class="card-text priceNum">
+              <sup class="money">$</sup>
+              <span class="dollars">69</span>
+              <span class="cents">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150 GB monthly bandwith</li>
+              <li class="list-group-item">15$ monthly backup</li>
+              <li class="list-group-item">24/7 support</li>
+              <li class="list-group-item">Free SSL</li>            
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center">
+            <div class="card-title">
+              <h4>Pro</h4>
+              <h6>Monthly Plan</h6>
+            </div>
+            <div class="card-text priceNum action">
+              <sup class="money">$</sup>
+              <span class="dollars">99</span>
+              <span class="cents">.99</span>
+            </div>
+            <ul class="list-group text-muted">
+              <li class="list-group-item">150 GB monthly bandwith</li>
+              <li class="list-group-item">15$ monthly backup</li>
+              <li class="list-group-item">24/7 support</li>
+              <li class="list-group-item">Free SSL</li>            
+            </ul>
+            <a href="" class="btn">Buy</a>
+          </div>
+        </div>
+        
       </div>
 
-      </div>
-    </section>
+    </div>
+  </section>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
