--- a/index.html
+++ b/index.html
@@ -435,6 +435,54 @@
     </div>
   </section>
 
+  <!-- skills -->
+  <section id="skills">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 mx-auto">
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>HTML</h4>
+              <h4>95%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">95%</div>
+            </div>
+          </div>
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>PHP</h4>
+              <h4>75%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">75%</div>
+            </div>
+          </div>
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>CSS</h4>
+              <h4>93%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 93%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">93%</div>
+            </div>
+          </div>
+          <div class="single-progress text-white mb-3">
+            <div class="d-flex justify-content-between">
+              <h4>JS</h4>
+              <h4>85%</h4>
+            </div>
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">85%</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
   <!-- pricing -->
 
   <section id="pricing" class="py-5">
@@ -526,11 +574,27 @@
             <a href="" class="btn">Buy</a>
           </div>
         </div>
-        
       </div>
-
     </div>
   </section>
+
+  <!-- footer -->
+  <footer class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <p><i class="fas fa-phone"></i>&nbsp;062 218 454</p>
+          <p><i class="fas fa-envelope"></i>&nbsp;info@agency.com</p>
+          <p><i class="fas fa-map-marker-alt"></i>&nbsp;Zmaj Jovina 26, Novi Sad</p>
+        </div>
+        <div class="col-md-8">
+          <h2>About</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, ducimus consectetur perferendis quae illum amet.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
